terraform/final-terraform/db_instance.tf
resource "aws_db_instance" "tfer--postgres-db1" {
  allocated_storage                     = "20"
  auto_minor_version_upgrade            = "true"
  availability_zone                     = "eu-north-1b"
  backup_retention_period               = "1"
  backup_target                         = "region"
  backup_window                         = "02:11-02:41"
  ca_cert_identifier                    = "rds-ca-rsa2048-g1"
  copy_tags_to_snapshot                 = "true"
  customer_owned_ip_enabled             = "false"
  database_insights_mode                = "standard"
  db_subnet_group_name                  = "aws_db_subnet_group.tfer--default-vpc-0c31ec75d9cca6989.name"
  dedicated_log_volume                  = "false"
  deletion_protection                   = "false"
  engine                                = "postgres"
  engine_lifecycle_support              = "open-source-rds-extended-support-disabled"
  engine_version                        = "16.10"
  iam_database_authentication_enabled   = "false"
  identifier                            = "postgres-db1"
  instance_class                        = "db.t4g.micro"
  iops                                  = "0"
  kms_key_id                            = "arn:aws:kms:eu-north-1:155931191229:key/15495d49-1179-495b-8781-3b215280efd9"
  license_model                         = "postgresql-license"
  maintenance_window                    = "mon:05:43-mon:06:13"
  max_allocated_storage                 = "1000"
  monitoring_interval                   = "0"
  multi_az                              = "false"
  network_type                          = "IPV4"
  option_group_name                     = "default:postgres-16"
  parameter_group_name                  = "default.postgres16"
  performance_insights_enabled          = "true"
  performance_insights_kms_key_id       = "arn:aws:kms:eu-north-1:155931191229:key/15495d49-1179-495b-8781-3b215280efd9"
  performance_insights_retention_period = "7"
  port                                  = "5432"
  publicly_accessible                   = "true"
  storage_encrypted                     = "true"
  storage_throughput                    = "0"
  storage_type                          = "gp2"
  username                              = "postgres"
  vpc_security_group_ids                = ["aws_security_group_tfer--default_sg-0da3602ac5c81d27f_id"]
}
