terraform/final-terraform/vpc.tf
resource "aws_vpc" "tfer--vpc-0c31ec75d9cca6989" {
  assign_generated_ipv6_cidr_block     = "false"
  cidr_block                           = "172.31.0.0/16"
  enable_dns_hostnames                 = "true"
  enable_dns_support                   = "true"
  enable_network_address_usage_metrics = "false"
  instance_tenancy                     = "default"
}
